refactoring componenets , adding more styling custom and attaching material UI components

--- a/code/src/styles/index.css
+++ b/code/src/styles/index.css
@@ -17,52 +17,6 @@ body {
   background-color: var(--background-color);
 }
 
-.heading-container {
-  width: 100%;
-  height: 100%;
-  font-size: 16px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.heading {
-  cursor: pointer;
-  position: relative;
-  display: inline-block;
-  font-size: 24px;
-  background: linear-gradient(to bottom, #444, #444 60%, #fff 60%, #fff 100%);
-  background-clip: text;
-  -webkit-background-clip: text;
-  color: transparent;
-  background-repeat: no-repeat;
-  transition: background 0.2s ease-out;
-  white-space: nowrap;
-}
-
-.heading-style {
-  position: relative;
-}
-
-.heading-style:before {
-  content: "";
-  position: absolute;
-  left: 0;
-  right: 0;
-  height: 12px;
-  background: #444;
-  bottom: 25px;
-  transition: all 0.2s ease-out;
-}
-
-.heading-style:hover .heading {
-  background-position: 0 5px;
-}
-
-.heading-style:hover:before {
-  transform: translateY(5px);
-}
-
 .loading-screen {
   width: 100vw;
   height: 100vh;
@@ -73,17 +27,9 @@ body {
   place-items: center;
 }
 
-.hide-content {
-  display: none;
-}
-
 .highlight {
   color: var(--highlight);
   font-weight: 500;
-}
-
-button {
-  border-radius: 50%;
 }
 
 .move-btn {
@@ -98,7 +44,7 @@ button {
 }
 
 .new-thought-container {
-  width: 320px;
+  width: 300px;
 }
 
 .new-thought-label {
@@ -119,7 +65,7 @@ button {
 }
 
 textarea {
-  width: 316px;
+  width: 296px;
   height: 40px;
   margin-top: 16px;
   margin-left: -2px;
@@ -132,6 +78,35 @@ textarea {
 
 textarea:focus {
   border: 1px solid var(--theme-color);
+}
+
+.likes-counter-container {
+  margin: 10px;
+  text-align: center;
+}
+
+.like-counter {
+  font-size: 14px;
+}
+
+.update-button-container {
+  margin: 30px;
+}
+
+.all-thoughts-container {
+  margin-top: 30px;
+}
+
+.uploaded-thought-container {
+  width: 334px;
+  border-radius: 2px;
+  margin: 30px;
+  -webkit-box-shadow: 7px 7px 0px 1px rgba(0, 0, 0, 0.42);
+  box-shadow: 7px 7px 0px 1px rgba(0, 0, 0, 0.42);
+}
+
+.inner-uploaded-thought-container {
+  padding: 6px;
 }
 
 @media (min-width: 767px) {
@@ -151,23 +126,18 @@ textarea:focus {
     margin: 40px;
   }
   textarea {
-    width: 540px;
+    width: 544px;
     height: 58px;
     margin-top: 30px;
     font-size: 18px;
   }
-  .heading {
-    font-size: 3rem;
+  .like-counter {
+    font-size: 20px;
   }
-  .heading-style:before {
-    bottom: 58px;
-    height: 15px;
+  .all-thoughts-container {
+    margin-top: 40px;
   }
-  .heading-style:hover .heading {
-    background-position: 0 11px;
-  }
-
-  .heading-style:hover:before {
-    transform: translateY(10px);
+  .all-thoughts-container {
+    margin-top: 40px;
   }
 }
