--- a/code/src/styles/index.css
+++ b/code/src/styles/index.css
@@ -98,7 +98,7 @@ textarea:focus {
 .uploaded-thought-container {
   width: 334px;
   border-radius: 2px;
-  margin: 30px;
+  margin-top: 30px;
   -webkit-box-shadow: 7px 7px 0px 1px rgba(0, 0, 0, 0.42);
   box-shadow: 7px 7px 0px 1px rgba(0, 0, 0, 0.42);
 }
