--- a/code/src/index.css
+++ b/code/src/index.css
@@ -11,3 +11,91 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+p {
+  font-family: 'Roboto Mono', monospace;
+}
+
+label {
+  font-family: 'Roboto Mono', monospace;
+  font-weight: bolder;
+  font-size: 11px;
+  padding: 5px;
+}
+
+input {
+  font-family: 'Roboto Mono', monospace;
+  font-weight: bold;
+  border: rgb(182, 182, 182) 1.5px solid;
+  width: 93%;
+  margin: 7px 5px;
+  padding-top: 15px;
+}
+
+main {
+  display: flex;
+  height: auto;
+  flex-direction: column;
+}
+
+form {
+  border: 1px solid black;
+  margin: 10px;
+  margin-bottom: 0;
+  padding: 10px;
+  box-shadow: 6px 6px 1px 1px rgba(5, 5, 5, 0.9);
+  background: rgb(238, 236, 236);
+  max-width: 350px;
+}
+
+.sendbtn {
+  background-color: rgb(251, 176, 176);
+  border-radius: 25px;
+  color: rgb(29, 28, 28);
+  font-family: 'Roboto Mono', monospace;
+  font-weight: bolder;
+  font-size: 12px;
+  border: none;
+  margin: 5px;
+}
+
+.thought-container {
+  border: 1px solid black;
+  margin: 25px;
+  padding: 10px;
+  box-shadow: 6px 6px 1px 1px rgba(5, 5, 5, 0.9);
+  max-width: 350px;
+}
+
+.loading-overlay {
+	position: absolute;
+	top: 0;
+	right: 0;
+	bottom: 0;
+	left: 0;
+	background: #fff;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+.loading-spinner {
+	width: 50px;
+	height: 50px;
+	border: 5px solid #dcdcdc;
+	border-radius: 50%;
+	border-left: 5px solid #fff;
+	animation: spinner infinite 0.5s;
+}
+
+@keyframes spinner {
+	0% {
+		transform: rotate(0);
+	}
+	50% {
+		transform: rotate(180deg);
+	}
+	100% {
+		transform: rotate(360deg);
+	}
+}
