--- a/code/src/index.css
+++ b/code/src/index.css
@@ -1,8 +1,6 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
+  margin: 20px;
+  font-family: "Roboto Mono", monospace;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -10,4 +8,67 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+textarea {
+  resize: none;
+  width: 300px;
+  border: 2px solid red;
+  margin-left: 30px;
+}
+
+h1 {
+  margin-left: 30px;
+}
+
+form {
+  margin: 0 auto;
+}
+
+.input-container {
+  border: 20px solid green;
+}
+
+.submitBtn {
+  background-color: pink;
+  border-radius: 20px;
+  margin-left: 30px;
+  margin-bottom: 10px;
+  padding: 5px;
+}
+
+.thoughts-card,
+form {
+  border: 2px solid black;
+  width: 30%;
+  margin: 20px auto;
+  box-shadow: 6px 6px black;
+}
+
+.thoughts-card p {
+  margin: 10px;
+}
+
+button {
+  font-family: "Roboto Mono", monospace;
+  border: none;
+}
+
+.heart-button {
+  background-color: lightgray;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  margin-left: 10px;
+  margin-bottom: 10px;
+}
+
+.heart-button:hover {
+  background-color: pink;
+  cursor: pointer;
+}
+
+.date {
+  margin-right: 10px;
+  float: right;
 }
