--- a/code/src/index.css
+++ b/code/src/index.css
@@ -1,21 +1,77 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
+  font-family: "Roboto Mono", monospace;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  text-align: center;
-  background: coral;
+  background: white;
 }
 
-code {
+/* code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+} */
+
+form {
+  display: flex;
+  flex-direction: column;
+  margin-top: 20px;
+}
+
+.input-container {
+  background: maroon;
+  display: inline;
 }
 
 textarea {
   resize: none;
+  margin: 3%;
+  width: 300px;
 }
+
+button {
+  font-family: "Roboto Mono", monospace;
+  border: none;
+}
+
+.input-text {
+  margin: 20px auto;
+  border: solid 2px black;
+  width: 30%;
+  box-shadow: 6px 6px black;
+  text-align: left;
+}
+
+.submit-button {
+  background: rgb(246, 153, 153);
+}
+
+.likes-button {
+  background: lightgray;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  margin-left: 3%;
+  margin-bottom: 2%;
+}
+
+.likes-button:hover {
+  background: grey;
+  cursor: pointer;
+}
+
+.container {
+  margin: 20px auto;
+  border: solid 2px black;
+  width: 30%;
+  box-shadow: 6px 6px black;
+  text-align: left;
+}
+
+.container p {
+  margin-left: 3%;
+}
+
 .date {
+  float: right;
+  margin-right: 3%;
 }
