--- a/code/src/components/form.css
+++ b/code/src/components/form.css
@@ -4,3 +4,27 @@
   flex-direction: column;
   align-items: center;
 }
+
+.input-container {
+  margin: 20px;
+}
+
+.thougths-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+@media (min-width: 760px) {
+  .thougths-container {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    align-items: start;
+  }
+}
+
+@media (min-width: 1100px) {
+  .thougths-container {
+    grid-template-columns: 1fr 1fr 1fr;
+  }
+}
