--- a/code/src/components/thoughts.css
+++ b/code/src/components/thoughts.css
@@ -6,3 +6,43 @@
   box-shadow: 5px 10px;
   background: white;
 }
+
+.heart-and-created {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.button {
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  display: flex;
+  align-items: center;
+  border: none;
+  background: inherit;
+}
+
+.heart {
+  background: rgb(231, 229, 229);
+  border-radius: 50%;
+  width: 25px;
+  font-size: 20px;
+  margin: 0;
+  color: red;
+  padding: 7px;
+}
+
+.hearts-count {
+  margin: 0;
+  font-size: 10px;
+  color: rgb(196, 195, 195);
+  padding-left: 5px;
+}
+
+.created-text {
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 12px;
+  color: rgb(196, 195, 195);
+}
+
+@media (min-width: 760px) {
+}
