--- a/code/src/styles/index.css
+++ b/code/src/styles/index.css
@@ -39,9 +39,12 @@ body {
   margin-top: 10px;
 }
 
-.symbols-counter {
+.symbols-counter,
+.sub-text-styling {
   font-size: 12px;
   margin-top: 0;
+  color: var(--theme-color);
+  margin-bottom: 0;
 }
 
 .new-thought-container {
@@ -95,7 +98,7 @@ textarea:focus {
   margin: 30px;
 }
 
-.uploaded-thought-container {
+.each-thought-wrapper {
   width: 334px;
   border-radius: 2px;
   margin-top: 30px;
@@ -103,22 +106,40 @@ textarea:focus {
   box-shadow: 7px 7px 0px 1px rgba(0, 0, 0, 0.42);
 }
 
-.inner-uploaded-thought-container {
+.inner-each-thought-container {
   padding: 6px;
+  display: flex;
+  flex-direction: column;
+}
+
+.like-btn-post-moment-container {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  margin-top: 20px;
 }
 
 @media (min-width: 767px) {
-  .symbols-counter {
+  .symbols-counter,
+  .sub-text-styling {
     font-size: 16px;
   }
   .new-thought-container {
     width: 550px;
     padding: 18px;
   }
-  .new-thought-label {
+  .each-thought-wrapper {
+    width: 620px;
+    margin-top: 40px;
+  }
+  .new-thought-label,
+  .thought-text {
     display: flex;
     flex-wrap: wrap;
     font-size: 20px;
+    margin-top: 14px;
+    /*? */
   }
   .new-thought-space {
     margin: 40px;
@@ -131,5 +152,14 @@ textarea:focus {
   }
   .like-counter {
     font-size: 20px;
+  }
+  .update-button-container {
+    margin: 50px;
+  }
+  .inner-each-thought-container {
+    padding: 14px;
+  }
+  .like-btn-post-moment-container {
+    margin-top: 20px;
   }
 }
