--- a/code/src/index.css
+++ b/code/src/index.css
@@ -137,3 +137,42 @@ body {
 } */
 
 /* #f2f0f0 */
+
+.loading-container {
+	width: 100vw;
+	height: 100vh;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	background-color: #f3b1af;
+}
+
+.loading-overlay {
+	position: absolute;
+	top: 0;
+	right: 0;
+	bottom: 0;
+	left: 0;
+}
+
+.loading-spinner {
+	width: 50px;
+	height: 50px;
+	border: 5px solid rgba(255, 255, 255, 0.6);
+	border-radius: 50%;
+	border-left: 5px solid #f3b1af;
+	animation: spinner infinite 0.5s;
+	display: inline-block;
+}
+
+@keyframes spinner {
+	0% {
+		transform: rotate(0);
+	}
+	50% {
+		transform: rotate(180deg);
+	}
+	100% {
+		transform: rotate(360deg);
+	}
+}
