--- a/code/src/index.css
+++ b/code/src/index.css
@@ -1,13 +1,170 @@
+@import url('https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c&display=swap');
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+  font-family: 'M PLUS Rounded 1c', sans-serif;
+  font-size: 18px;
+  /* font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
+    sans-serif; 
   -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  -moz-osx-font-smoothing: grayscale;*/
+}
+
+p {
+  margin-block-start: 4px;
+  margin-block-end: 4px;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+.container {
+  width: 300px;
+  margin: 0 auto;
+}
+
+.date {
+  grid-column: span 9;
+  margin-inline-end: 0;
+  color: #999999;
+}
+
+.loading-overlay {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background: #fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.loading-spinner {
+  width: 50px;
+  height: 50px;
+  border: 5px solid #dcdcdc;
+  border-radius: 50%;
+  border-left: 5px solid #fff;
+  animation: spinner infinite 0.5s;
+  display: inline-block;
+}
+
+@keyframes spinner {
+  0% {
+    transform: rotate(0);
+  }
+  50% {
+    transform: rotate(180deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+/* form styling */
+.happy-form {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  margin-top: 40px;
+  gap: 10px;
+  border: 1px solid;
+  box-shadow: 8px 8px 0;
+  padding: 20px;
+  background-color: rgb(233, 231, 231);
+}
+
+.newThought {
+  width: 97%;
+  height: 40px;
+  box-sizing: content-box;
+  outline: none;
+  padding-inline-start: 6px;
+  padding-bottom: 15px;
+  font-family: inherit;
+  font-size: inherit;
+}
+
+.send-btn {
+  font-family: inherit;
+  outline: none;
+  border: 1px solid transparent;
+  background: #DB398D;
+  height: 50px;
+  border-radius: 25px;
+  padding: 6px 14px;
+  color: #fff;
+  font-size: inherit;
+  font-weight: 700;
+  cursor: pointer;
+}
+
+/* message styling */
+.like-container {
+  display: grid;
+  grid-template-columns: repeat(12, 1fr);
+  align-items: center;
+  justify-items: end;
+  width: 100%;
+}
+
+.thought-item {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: flex-start;
+  margin-top: 30px;
+  gap: 10px;
+  border: 1px solid;
+  box-shadow: 8px 8px 0;
+  padding: 20px;
+  word-break: break-word;
+  min-height: 100px;
+}
+
+/* .message {
+  word-wrap: break-word;
+} */
+
+.likes, .date {
+  font-size: 14px;
+}
+
+.likes {
+  margin-inline-end: 10px;
+  grid-column: span 2;
+  color: #727171;
+  font-weight: bold;
+}
+
+.like-btn {
+  font-family: inherit;
+  font-size: 24px;
+  border: 1px solid transparent;
+  background: #DB398D;
+  height: 50px;
+  width: 50px;
+  border-radius: 50%;
+  color: #fff;
+  font-weight: 700;
+  cursor: pointer;
+}
+
+/* styling for tablet and desktop */
+
+@media only screen and (min-width: 768px) {
+  .container {
+    width: 600px;
+  }
+  .date {
+    grid-column: span 10;
+  }
+  .likes {
+    grid-column: span 1;
+  }
 }
