--- a/code/src/index.css
+++ b/code/src/index.css
@@ -12,12 +12,18 @@ code {
 
 textarea {
   resize: none;
-  width: 300px;
-  border: 2px solid red;
-  margin-left: 30px;
+  width: 90%;
+  border: 2px solid rgb(150, 149, 149);
+  overflow-x: hidden;
+}
+
+.new-thought-input {
+  margin: 0 auto;
+  display: flex;
 }
 
 h1 {
+  margin-top: 0;
   margin-left: 30px;
 }
 
@@ -26,15 +32,16 @@ form {
 }
 
 .input-container {
-  border: 20px solid green;
+  background-color: rgb(224, 220, 220);
 }
 
 .submitBtn {
   background-color: pink;
   border-radius: 20px;
-  margin-left: 30px;
   margin-bottom: 10px;
   padding: 5px;
+  margin-top: 10px;
+  margin-left: 3%;
 }
 
 .thoughts-card,
@@ -43,6 +50,7 @@ form {
   width: 30%;
   margin: 20px auto;
   box-shadow: 6px 6px black;
+  overflow-wrap: break-word;
 }
 
 .thoughts-card p {
@@ -68,7 +76,19 @@ button {
   cursor: pointer;
 }
 
+.heart-button:focus {
+  background-color: pink;
+}
+
+.total-likes {
+  font-size: 12px;
+  margin-left: 5px;
+  color: gray;
+}
+
 .date {
+  font-size: 12px;
   margin-right: 10px;
   float: right;
+  color: gray;
 }
