--- a/code/src/components/ThoughtsList/ThoughtsList.css
+++ b/code/src/components/ThoughtsList/ThoughtsList.css
@@ -3,9 +3,10 @@
 }
 
 .thoughts__thought-container {
-  width: 400px;
-  height: 150px;
+  width: 450px;
+  height: 180px;
   margin: 10px;
+  margin-top: 20px;
   padding: 20px;
   border: 1px solid black;
   box-shadow: 8px 8px black;
@@ -13,9 +14,13 @@
   grid-template-rows: 1fr auto;
 }
 
+.thoughts__message {
+  overflow-wrap: anywhere;
+}
+
 .thoughts__likes-time {
   display: grid;
-  grid-template-columns: auto 1fr auto;
+  grid-template-columns: auto 1fr auto auto;
   column-gap: 10px;
   align-items: center;
 }
