--- a/code/src/index.css
+++ b/code/src/index.css
@@ -1,8 +1,13 @@
+:root {
+  --primary: #ffffff;
+  --secondary: #f3b1af;
+  --tertiary: #c7c7c7;
+  --fourth: #333;
+}
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
+  font-family: "Trispace", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -18,14 +23,15 @@ main {
   align-items: center;
 }
 
-.form {
+.form,
+.thoughts-card {
   display: flex;
   flex-direction: column;
   width: 330px;
-  background-color: #f2f0f0;
+  background-color: var(--primary);
   padding: 1rem;
-  border: 1px solid #333;
-  box-shadow: 8px 8px #333;
+  border: 1px solid var(--fourth);
+  box-shadow: 8px 8px var(--fourth);
   margin-bottom: 1rem;
   border-radius: 2px;
   margin-bottom: 2rem;
@@ -33,10 +39,10 @@ main {
 
 .input {
   -webkit-appearance: none;
-  -moz-apperance: none;
+  -moz-appearance: none;
   border: none;
   min-height: 56px;
-  border: 1px solid #c7c7c7;
+  border: 1px solid var(--tertiary);
   border-radius: 2px;
   padding-left: 0.5rem;
 }
@@ -46,18 +52,57 @@ main {
 }
 
 .send-button {
-  background-color: #f3b1af;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  background-color: var(--secondary);
   border-radius: 24px;
+  border: none;
   height: 48px;
   margin-top: 1rem;
   font-size: 1rem;
+  cursor: pointer;
 }
 
-.message-section {
-  background-color: blueviolet;
-  margin: 5px;
+.like-button {
+  cursor: pointer;
 }
 
-.thoughts-card {
-  padding: 5px solid green;
+.date {
+  display: flex;
+  justify-content: end;
+  color: var(--tertiary);
+}
+
+.loading-overlay {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background: #fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.loading-spinner {
+  width: 50px;
+  height: 50px;
+  border: 5px solid #dcdcdc;
+  border-radius: 50%;
+  border-left: 5px solid #fff;
+  animation: spinner infinite 0.5s;
+}
+
+@keyframes spinner {
+  0% {
+    transform: rotate(0);
+  }
+  50% {
+    transform: rotate(180deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
