--- a/code/src/index.css
+++ b/code/src/index.css
@@ -11,3 +11,19 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+.wrapper {
+  width: 70%;
+  max-width: 450px;
+  margin: 0 auto;
+  padding-top: 100px;
+  }
+
+@media only screen and (min-width: 768px) {
+  .wrapper {
+    max-width: 450px;
+    margin: 0 auto;
+    padding-top: 100px;
+    height: 812px;
+  }
+}
