--- a/code/src/index.css
+++ b/code/src/index.css
@@ -18,11 +18,15 @@ body {
   background-color: rgb(237, 237, 237);
 }
 
+.question-container {
+  margin-left: 20px;
+  margin-top: 20px;
+}
+
 .question {
-  margin: 60px 0 0 20px;
   font-weight: 300;
   font-size: 24px;
-  padding-top: 20px;
+  padding-bottom: 10px;
 }
 
 .submit-btn {
@@ -37,13 +41,12 @@ body {
 .icon-btn {
   color: red;
   padding: 0 10px;
-  font-size: 24px;
+  font-size: 18px;
 }
 
 input {
-  padding: 10px;
+  margin-top: 20px;
   padding-bottom: 40px;
-  margin: 20px;
   width: 90%;
   background-color: white;
 }
@@ -60,7 +63,7 @@ input {
 }
 
 .answer {
-  margin-left: 20px;
+  margin: 0 20px;
 }
 
 .heart-btn {
@@ -76,4 +79,27 @@ input {
   border-radius: 50%;
   padding: 10px;
   font-size: 20px;
+}
+.counter {
+  background-color: white;
+  border: 1px solid black;
+  width: 40px;
+  margin-left: 20px;
+  padding: 2px 10px;
+  text-align: center;
+}
+
+.invalid {
+  color: rgb(223, 94, 85);
+  margin-left: 25px;
+  padding-right: 2px;
+}
+
+.valid {
+  color: green;
+  margin-left: 20px;
+}
+
+.invalid-input {
+  background-color: rgb(222, 201, 199);
 }
