--- a/code/src/styles/likebutton.css
+++ b/code/src/styles/likebutton.css
@@ -18,6 +18,8 @@
 .btn-border {
   border-radius: 50%;
   border: 2px solid #f53536;
+  width: 50px;
+  height: 50px;
 }
 
 .like-button:hover:not(:disabled) {
@@ -46,7 +48,7 @@
   display: flex;
   align-self: center;
   justify-self: center;
-  /* margin-top: 4px; */
+  margin-top: 4px;
 }
 
 @media (min-width: 767px) {
@@ -57,5 +59,9 @@
   /* https://stackoverflow.com/questions/36482126/how-to-enlarge-the-svg-icon-in-material-ui-iconbuttons */
   .like-icon {
     transform: scale(1.3);
+  }
+  .btn-border {
+    width: 60px;
+    height: 60px;
   }
 }
