--- a/code/src/index.css
+++ b/code/src/index.css
@@ -11,3 +11,31 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+.thought-card {
+  width: 300px;
+  height: 200px;
+  margin: 20px 50px;
+  padding: 10px 20px;
+  background-color: cornflowerblue;
+}
+
+.icon {
+  fill: crimson;
+}
+
+.heart-wrapper {
+  width: 40px;
+  height: 40px;
+  background-color: darkkhaki;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.text-input {
+  display: block;
+  width: 250px;
+  height: 80px;
+}
