--- a/code/src/index.css
+++ b/code/src/index.css
@@ -57,6 +57,7 @@ form {
   padding: 8px;
   box-shadow: 5px 5px #000;
   background-color: #fff;
+  overflow-wrap: break-word;
 }
 
 .submit-button {
@@ -74,6 +75,14 @@ form {
 
 .submit-text {
   margin: 0;
+}
+
+.filter-container {
+  margin-top: 10px;
+}
+
+select {
+  font-family: 'PT Mono', monospace;
 }
 
 /*Default styling and color when not cliked*/
