--- a/code/src/Components/newThoughtInput.css
+++ b/code/src/Components/newThoughtInput.css
@@ -1,4 +1,4 @@
-form {
+.new-thought-input__form {
   padding: 10px;
   width: 100%;
   height: 100%;
@@ -6,4 +6,30 @@ form {
   border: 1px solid #000;
   box-shadow: 5px 5px #000;
   align-items: center;
+}
+
+textarea {
+  resize: none;
+  width: 100%;
+  margin: 10px 2px;
+  font-size: 20px;
+}
+
+.new-thought-input__button-wrapper {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.new-thought-input__button {
+  /* border-radius: */
+  color: #000;
+  background-color: #ffadad;
+}
+
+button {
+  border-style: none;
+  font-weight: 700;
+  font-size: 14px;
 }
