Split in new components, add loading

--- a/code/src/index.css
+++ b/code/src/index.css
@@ -19,6 +19,7 @@ code {
 
 .date {
   font-style: italic;
+  font-size: 14px;
 }
 
 form {
@@ -33,6 +34,7 @@ form {
 }
 form textarea {
 margin-top: 15px;
+padding: 5px
 
 }
 
