--- a/code/src/index.css
+++ b/code/src/index.css
@@ -1,8 +1,8 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
+  font-family: "Roboto Mono", monospace;
+  font-weight: 400;
+  letter-spacing: -1px;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -11,6 +11,7 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
 .content-wrapper {
   display: flex;
   flex-direction: column;
@@ -35,12 +36,18 @@ code {
   height: 35px;
 }
 .new-thought-button {
-  margin-top: 10px;
   border: none;
   border-radius: 25px;
   width: 190px;
   height: 35px;
   background-color: rgb(245, 169, 169);
+  cursor: pointer;
+}
+.caracters {
+  margin: 5px;
+}
+.heart {
+  color: red;
 }
 
 .thought-container {
@@ -52,6 +59,7 @@ code {
 }
 .message {
   margin-top: 0;
+  overflow-wrap: break-word;
 }
 .like-section {
   position: relative;
@@ -63,6 +71,8 @@ code {
   height: 30px;
   border-radius: 50%;
   border: none;
+  cursor: pointer;
+  color: red;
 }
 .number-of-likes {
   display: inline-block;
@@ -71,4 +81,50 @@ code {
 .date {
   position: absolute;
   right: 5px;
+}
+.loading-overlay {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background: #fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.loading-spinner {
+  width: 50px;
+  height: 50px;
+  border: 5px solid #dcdcdc;
+  border-radius: 50%;
+  border-left: 5px solid rgb(212, 88, 196);
+  animation: spinner infinite 0.3s;
+}
+@keyframes spinner {
+  0% {
+    transform: rotate(0);
+  }
+  50% {
+    transform: rotate(180deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+.error {
+  text-align: center;
+  background: #fff;
+  color: red;
+  overflow-wrap: break-word;
+  width: 100%;
+}
+
+@media (min-width: 799px) {
+  .new-thought-container {
+    width: 500px;
+  }
+  .thought-container {
+    width: 500px;
+  }
 }
