--- a/code/src/components/ThoughtsItem.css
+++ b/code/src/components/ThoughtsItem.css
@@ -1,29 +1,45 @@
 .thought-container {
+  display: flex;
+  flex-direction: column;
   padding: 10px;
   border: 1px solid black;
   box-shadow: 5px 5px;
-  margin: 30px;
+  width: 80%;
 }
 
 .thoughts-text {
+  word-break: break-word;
   margin: 0;
 }
 
 .input-section {
   display: flex;
+  flex-direction: row;
   align-items: center;
+  justify-content: space-between;
+  width: 100%;
   margin-top: 10px;
   margin-bottom: 10px;
+  font-size: 12px;
+}
+
+.like-section {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .like-button {
   border: none;
   border-radius: 50px;
   padding-top: 5px;
-  padding-right: 10px;
   padding-bottom: 5px;
   padding-left: 10px;
   margin-right: 5px;
+}
+
+.like-button:active {
+  background-color: rgb(245, 177, 169);
 }
 
 .likes {
@@ -31,7 +47,5 @@
 }
 
 .date {
-  position: absolute;
-  margin-left: 150px;
   color: lightgray;
 }
