--- a/code/src/index.css
+++ b/code/src/index.css
@@ -1,5 +1,5 @@
 body {
-  margin: 10px;
+  margin: 0x;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
@@ -16,6 +16,7 @@ code {
   font-family: "Roboto Mono", monospace;
   display: flex;
   flex-direction: column;
+  justify-content: center;
   align-items: center;
 }
 
@@ -26,6 +27,7 @@ code {
   border: 1px solid black;
   padding: 10px;
   box-shadow: 5px 5px;
+  width: 80%;
 }
 
 .input {
@@ -41,9 +43,9 @@ code {
   border: none;
   background-color: rgb(245, 177, 169);
   border-radius: 20px;
-  padding-top: 2px;
+  padding-top: 5px;
   padding-right: 15px;
-  padding-bottom: 2px;
+  padding-bottom: 5px;
   padding-left: 15px;
   display: flex;
   align-items: center;
