new structure and loading spinner added

--- a/code/src/index.css
+++ b/code/src/index.css
@@ -130,6 +130,37 @@ h1 {
   color: rgb(160, 156, 156);
 }
 
+.loader-overlay {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background-color: #fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.loader-spinner {
+  display: inline;
+  height: 50px;
+  width: 50px;
+  border: 5px solid #a342207d;
+  border-radius: 50%;
+  border-left: 5px solid #e3e0e0cf;
+  animation: spinner infinite 1s linear;
+}
+
+@keyframes spinner {
+  0% {
+    transform: rotate(0);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
 @media (min-width: 768px) {
   .thought-cards-container {
     flex-direction: row;
