--- a/code/src/components/ThoughtForm.css
+++ b/code/src/components/ThoughtForm.css
@@ -8,10 +8,10 @@
     background-color: rgba(194, 210, 255, 0.904);
     width: 45vh;
     border-radius: 10px;
+    font-weight: bold;
 }
 
 .label-title {
-    font-weight: bold;
     font-size: 17px;
     color: rgb(42, 45, 54);
 }
@@ -28,11 +28,14 @@
     font-size: 15px;
     line-height: 2px;
     transition: .2s ease-in-out;
-    letter-spacing: 0.5px;
+    box-shadow: 0px 2px 2px rgb(42, 45, 54);
 }
 
-.submit-button:hover {
-    transform: scale(1.05);
+.submit-button:active {
+    -ms-transform: translateY(2px);
+    -webkit-transform: translateY(2px);
+    transform: translateY(2px);
+    box-shadow: 0 0 1px rgb(42, 45, 54);
 }
 
 .input-form {
@@ -42,8 +45,11 @@
     border: none;
     border-radius: 10px;
     font-family: 'Poiret One';
-    font-size: 16px;
     font-weight: bold;
+    font-size: 16px;
     color: rgb(42, 45, 54);
-    letter-spacing: 1px;
+}
+
+.character-counter {
+    color: rgba(42, 45, 54, 0.637);
 }
