--- a/code/src/components/ThoughtItem.css
+++ b/code/src/components/ThoughtItem.css
@@ -11,14 +11,16 @@
 
 .thought-message {
     word-break: break-word;
-    font-weight: bold;
     font-size: 17px;
     color: rgb(42, 45, 54);
+    font-weight: bold;
 }
 
 .button-date-container {
     display: flex;
     justify-content: space-between;
+    color: rgba(42, 45, 54, 0.637);
+    font-weight: bold;
 }
 
 .hearts-button-container {
@@ -34,11 +36,12 @@
     cursor: pointer;
     height: 35px;
     width: 35px;
-    transition: .2s ease-in-out;
+    transition: .2s;
+    box-shadow: 0px 2px 2px rgb(42, 45, 54);
 }
 
-.like-button:hover {
-    transform: scale(1.1);
+.like-button:active {
+    box-shadow: 0 0 2px rgb(42, 45, 54);
 }
 
 .heart-icon {
