--- a/code/src/index.css
+++ b/code/src/index.css
@@ -6,6 +6,7 @@ body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  background-color: rgb(228, 169, 165);
 }
 
 .question-card {
@@ -46,6 +47,7 @@ body {
 
 input {
   margin-top: 20px;
+  padding: 10px;
   padding-bottom: 40px;
   width: 90%;
   background-color: white;
@@ -102,4 +104,58 @@ input {
 
 .invalid-input {
   background-color: rgb(222, 201, 199);
+}
+
+.loading-container {
+  position: absolute;
+  top: 0%;
+  left: 0%;
+  right: 0;
+  bottom: 0;
+  /* transform: translate(-50%, -50%); */
+  background-color: rgb(228, 169, 165);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.progress-container {
+  position: relative;
+  height: 30px;
+  width: 50%;
+  border: 10px solid black;
+  border-radius: 15px;
+}
+
+.progress-container .progress {
+  position: absolute;
+  background-color: #ffffff;
+  width: 0px;
+  height: 10px;
+  border-radius: 15px;
+  animation: progres 1s infinite linear;
+}
+
+@keyframes progres {
+  0% {
+    width: 0%;
+  }
+  25% {
+    width: 50%;
+  }
+  50% {
+    width: 75%;
+  }
+  75% {
+    width: 85%;
+  }
+  100% {
+    width: 100%;
+  }
+}
+
+footer {
+  margin-top: auto;
+  background-color: rgb(237, 237, 237);
+  padding: 10px;
 }
