--- a/code/src/index.css
+++ b/code/src/index.css
@@ -18,6 +18,7 @@ code {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  gap: 30px;
 }
 
 .input-container {
@@ -25,7 +26,7 @@ code {
   flex-direction: column;
   background-color: rgb(240, 239, 239);
   border: 1px solid black;
-  padding: 10px;
+  padding: 15px;
   box-shadow: 5px 5px;
   width: 80%;
 }
@@ -36,6 +37,11 @@ code {
   padding: 10px;
   margin-top: 10px;
   margin-bottom: 10px;
+}
+
+.counter {
+  margin-bottom: 10px;
+  font-size: 12px;
 }
 
 .submit-button {
