--- a/code/src/index.css
+++ b/code/src/index.css
@@ -72,6 +72,10 @@ h1 {
   box-shadow: 10px 10px var(--box-shadow-color);
 }
 
+.post-a-thought-container {
+  margin-bottom: 48px;
+}
+
 .post-a-thought-container h2 {
   font-size: 20px;
 }
@@ -145,6 +149,7 @@ textarea:valid {
   justify-content: space-between;
   align-items: center;
   color: var(--data-text-color);
+  font-size: 16px;
 }
 
 .hearts-container {
@@ -152,7 +157,6 @@ textarea:valid {
   justify-content: flex-start;
   align-items: center;
   color: var(--heart-bg-color);
-  font-size: 16px;
 }
 
 .hearts-container button {
@@ -180,6 +184,13 @@ footer {
 
 footer p {
   margin: 0;
+}
+
+.loading-spinner {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 @keyframes rainbow {
@@ -212,5 +223,48 @@ footer p {
   }
   100% {
     transform: scale(1);
+  }
+}
+
+@media (min-width: 0) and (max-width: 768px) {
+  fieldset {
+    border: 4px solid var(--fieldset-border-color);
+    margin: 6px;
+  }
+  legend {
+    padding: 5px;
+  }
+  h1 {
+    font-size: 24px;
+  }
+  .post-a-thought-container,
+  .thought-card {
+    margin: 6px auto;
+    padding: 10px 16px;
+    width: 96%;
+    box-shadow: 5px 5px var(--box-shadow-color);
+  }
+  .post-a-thought-container {
+    margin-bottom: 14px;
+  }
+  .post-a-thought-container h2 {
+    font-size: 18px;
+  }
+  textarea {
+    height: 52px;
+    font-size: 14px;
+  }
+  .remaining-chars {
+    font-size: 14px;
+  }
+  .post-a-thought-container button {
+    font-size: 14px;
+    padding: 10px 22px;
+  }
+  .heart-timestample-container {
+    font-size: 14px;
+  }
+  footer {
+    font-size: 14px;
   }
 }
