--- a/code/src/index.css
+++ b/code/src/index.css
@@ -45,7 +45,7 @@ code {
   width: 90%;
   height: 40px;
   border-color: rgb(207, 207, 207);
-  border: 2px;
+  /* border: 4px; */
 }
 button {
   -webkit-appearance: none;
@@ -56,9 +56,10 @@ button {
 .btn {
   display: inline-block;
   border-radius: 100%;
-  color: salmon;
+  color: rgb(255, 64, 50);
+  background-color: rgb(255, 173, 173);
   width: 10%;
-  height: 50%;
+  height: 27px;
 }
 
 .form {
@@ -99,4 +100,36 @@ button {
 
 .btn-heart {
   color: red;
+}
+
+.loading-overlay {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background: #fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.loading-spinner {
+  width: 50px;
+  height: 50px;
+  border: 5px solid rgb(255, 173, 173);
+  border-radius: 50%;
+  border-left: 5px solid #fff;
+  animation: spinner infinite 1s;
+}
+@keyframes spinner {
+  0% {
+    transform: rotate(0);
+  }
+  50% {
+    transform: rotate(180deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
