--- a/code/src/index.css
+++ b/code/src/index.css
@@ -1,3 +1,4 @@
+/* body part */
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
@@ -5,8 +6,10 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background: rgb(34,193,195);
   background: linear-gradient(0deg, #FF9292 54%, #FFCCD2 100%);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 code {
@@ -14,40 +17,152 @@ code {
     monospace;
 }
 
-.date {
-  font-style: italic;
+/* loading */
+.heart-loader {
+  margin: 40px 0 0 60px;
+  /*background: #fcfcfc;*/
+  margin: auto;
+  margin-top: 200px;
+  border-radius: 10px;
+  height: 75px;
+  width: 75px;
+  margin-bottom: 10px;
+  float: center;
+  animation-delay: 0.9s;
+  animation-duration: 0.8s;
+  animation-name: pump;
+  animation-iteration-count: infinite;
+  animation-direction: alternate;
+  animation-timing-function: cubic-bezier(.26,-0.53,.57,2.32);
 }
 
-.loading-overlay {
+.heart-loader:before {
+  content: "";
   position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  background-color: #FFF;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  background: #EA4C89;
+  height: 40px;
+  width: 40px;
+  z-index: 0;
+  margin-top: 15px;
+  margin-left: 15px;
+  transform: rotate(45deg);
 }
 
-.loading-spinner {
-  width: 50px;
-  height: 50px;
-  border: 5px solid #dcdcdc;
+.heart-loader .circle1 {
+  content: "";
+  position: absolute;
+  background: #EA4C89;
+  height: 40px;
+  width: 40px;
+  z-index: 1;
   border-radius: 50%;
-  border-left: 5px solid #fff;
-  animation: spinner infinite 0.5s;
-  display: inline-block;
+  /*animation-direction: alternate;*/
 }
 
-@keyframes spinner {
-  0% {
-    transform: rotate(0)
+.heart-loader .circle2 {
+  content: "";
+  position: absolute;
+  background: #EA4C89;
+  height: 40px;
+  width: 40px;
+  z-index: 1;
+  margin-left: 30px;
+  border-radius: 50%;
+  /*animation-direction: alternate;*/
+}
+
+@keyframes pump {
+  0%{
+      transform: scale(1);
   }
-  50% {
-    transform: rotate(180deg)
-  }
-  100% {
-    transform: rotate(360deg)
+  100%{
+      transform: scale(1.1);
   }
 }
+
+@keyframes change {
+  25%,
+  50% {
+      margin-top: 30px;
+      margin-left: 0px;
+  }
+  75%,
+  100% {
+      margin-top: 0px;
+      margin-left: 30px;
+  }
+}
+
+/* main submit form container */
+.form-container {
+  display: flex;
+  flex-direction: column;
+  padding: 20px; 
+  margin: 30px;
+  box-sizing: content-box;
+  width: 80%;
+  height: fit-content;
+  border: solid black 2px;
+  background-color: lightgray;
+  box-shadow: 10px 10px;
+}
+
+.main-question {
+  padding-bottom: 10px;
+}
+
+.answer {
+  padding: 30px;
+  border: solid black 1px;
+}
+
+.send-button {
+border: none;
+border-radius: 20%;
+padding: 5px;
+margin-top: 10px;
+display: inline-flex;
+align-items: center ;
+color: black;
+background-color:#FF9292;
+width: fit-content;
+}
+
+/* answers container */
+.answer-container {
+  display: flex;
+  flex-direction: column;
+  padding: 20px; 
+  margin: 30px;
+  box-sizing: content-box;
+  width: 80%;
+  height: fit-content;
+  border: solid black 2px;
+  background-color: white;
+  box-shadow: 10px 10px;
+}
+
+.answered-ones {
+  margin-top: 10px;
+}
+
+.heart-button {
+  border: none;
+  border-radius: 20%;
+  padding: 5px;
+  display: inline-flex;
+  align-items: center ;
+  width: fit-content;
+  height: min-content;
+  }
+
+  .date {
+    font-style: italic;
+    color: gray; 
+  }
+
+  .heart-button-and-date {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+  }
