--- a/code/src/components/ThoughtForm.css
+++ b/code/src/components/ThoughtForm.css
@@ -42,12 +42,17 @@
     height: 55px;
     resize: none;
     background-color: rgba(226, 224, 250, 0.76);
-    border: none;
+    border: 2px solid rgba(42, 45, 54, 0);
     border-radius: 10px;
     font-family: 'Poiret One';
     font-weight: bold;
     font-size: 16px;
     color: rgb(42, 45, 54);
+}
+
+.input-form:focus {
+    outline: none;
+    border: 2px solid rgba(42, 45, 54, 0.507);
 }
 
 .character-counter {
