--- a/code/src/index.css
+++ b/code/src/index.css
@@ -154,7 +154,7 @@ textarea:valid {
 
 .hearts-container {
   display: flex;
-  justify-content: flex-start;
+  justify-content: center;
   align-items: center;
   color: var(--heart-bg-color);
 }
@@ -164,16 +164,17 @@ textarea:valid {
 }
 
 .hearts-container button:hover {
-  /* background: #ffadad; */
   animation: heartbeat 2s infinite;
 }
 
 .heart-emoji {
-  /* background: #eaeaea; */
   border: none;
   border-radius: 50%;
-  width: fit-content;
-  padding: 8px 16px 8px 12px;
+  /* width: 100%;
+  height: 100%; */
+  width: 40px;
+  height: 40px;
+  /* padding: 8px 16px 8px 12px; */
 }
 
 footer {
@@ -292,9 +293,9 @@ footer p {
   .heart-timestamp-container {
     font-size: 14px;
   }
-  .heart-emoji {
+  /* .heart-emoji {
     padding: 8px 12px 8px 12px;
-  }
+  } */
   footer {
     font-size: 14px;
   }
